parte da documetação da reserva pronta
